--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -1,8 +1,8 @@
 # Authors
 
 Billy Rick:
-  name        : "Billy Rick"
-  bio         : "What do you want, jewels? I am a very extravagant man."
+  name        : "Letters from Elsewhere"
+  bio         : "A journal of wandering and stillness."
   avatar      : "/assets/images/bio-photo-2.jpg"
   links:
     - label: "Email"
